Refactor environment configuration and update development script; add setup instructions

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,14 +1,4 @@
 VITE_BACKEND_URL="http://localhost:8000"
-# API Configuration
-VITE_API_URL=http://localhost:5000
-
-# Firebase (if using)
-VITE_FIREBASE_API_KEY=your-firebase-api-key
-VITE_FIREBASE_AUTH_DOMAIN=your-app.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-app.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
-VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_API_KEY=
 VITE_GEO_API_KEY=
 VITE_RAZORPAY_KEY_ID=
-
