--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,11 @@ http {
     include      /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     server { 
         listen 443 ssl;
         server_name quickbite.dedyn.io;
@@ -24,12 +29,33 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # proxy to backend
+        # proxy to backend (API)
         location /api/ {
             proxy_pass http://backend:8000/api/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # WebSocket / Socket.IO proxy
+        location /socket.io/ {
+            proxy_pass http://backend:8000/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # disable buffering to reduce latency
+            proxy_buffering off;
+
+            # keep connections open for long-running sockets
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
         }
     }
 
